--- a/MentoMenti/src/main/resources/static/css/sidebar.css
+++ b/MentoMenti/src/main/resources/static/css/sidebar.css
@@ -9,15 +9,16 @@ body{
 	text-decoration : none;
 }
 
-.sidebar{
+.sidebar2{
 	position : fixed;
 	left : -250px;
+	top: 0px;
 	width : 250px;
 	height : 100%;
-	background : rgba(0,0,0);
+	background : rgba(0,0,0,0.5);
 	transition: all .5s ease;
 }
-.sidebar header{
+.sidebar2 header{
 	font-size : 22px;
 	color : white;
 	text-align : center;
@@ -25,9 +26,9 @@ body{
 	background : rgba(0,0,0,0.8);
 	user-select : none;
 }
-.sidebar ul a{
+.sidebar2 ul a{
 	display : block;
-	height : 100%;
+	height : 50px;
 	width : 100%;
 	line-height : 65px;
 	font-size : 20px;
@@ -43,7 +44,7 @@ ul li:hover a{
 
 }
 
-.sidebar ul a i{
+.sidebar2 ul a i{
 	margin-right : 16px;
 }
 
@@ -52,7 +53,7 @@ ul li:hover a{
 }
 
 label #btn, label #cancel{
-	position : absolute;
+	position : fixed;
 	cursor : pointer;
 	background : #042331;
 	border-radius : 3px;
@@ -77,7 +78,7 @@ label #cancel{
 	transition : all .5s ease;
 }
 
-#check:checked ~ .sidebar{
+#check:checked ~ .sidebar2{
 	left:0px;
 }
 
