--- a/MentoMenti/bin/src/main/resources/static/css/sidebar.css
+++ b/MentoMenti/bin/src/main/resources/static/css/sidebar.css
@@ -100,14 +100,14 @@ label #cancel{
 }
 
 section{
-	background : url("../img/mainimg1.png") no-repeat;
+	background : url("../img/test2.png") no-repeat;
 	background-position: absolute;
-	background-size : cover;
+
 	left: 0;
     top: 0;
-    width: 100%;
-
-	height : 1000px;
+    max-width: 100%;
+	width : 1920px;
+	height : 700px;
 	transition:all .5s;
 }
 
