--- a/MentoMenti/src/main/resources/static/css/studySidebar.css
+++ b/MentoMenti/src/main/resources/static/css/studySidebar.css
@@ -34,6 +34,7 @@ input[id="menuicon"]{
 	display:none;
 }
 input[id="menuicon"]+label span{
+	z-index:1000;
 	display:block;
 	position:absolute;
 	width:100%;
