--- a/MentoMenti/src/main/resources/static/css/sidebar_phone.css
+++ b/MentoMenti/src/main/resources/static/css/sidebar_phone.css
@@ -15,13 +15,14 @@
 	position : fixed;
 	width : 100%;
 	background : rgba(0,0,0);
+	display:none;
 }
 
 .sidebar2 header{
 	font-size : 22px;
 	color : white;
 	text-align : center;
-	line-height :70px;
+	line-height :60px;
 	background : rgba(0,0,0,0.8);
 	user-select : none;
 }
@@ -44,10 +45,8 @@
 
 }
 
-.sidebar2 ul a i{
-	
-}
 
+/* 모바일/태블릿 환경 사이드바 버튼 */
 #check{
 	display:none;
 }
@@ -78,7 +77,7 @@ label #cancel{
 }
 
 
-
+/*버튼 클릭 시 변화*/
 #check:checked ~ label #btn{
 	left:250px;
 	opacity : 0;
@@ -89,21 +88,18 @@ label #cancel{
 	left:30px;
 }
 
-#contentSection{
-	transition:all 0s;
-}
-
-.sidebar2{
-	display:none;
-}
-
-
 #check:checked ~ .sidebar2{
 	display:block;
 }
 
-/*메뉴로 본문 내용이 가리지 않게 임시로*/
+
+/*transition 효과 제거*/
+#contentSection{
+	transition:all 0s;
+}
+
+
+/*메뉴로 본문 내용이 가리지 않게 임시로 margin-top 지정*/
 #check:checked ~ #contentSection{
-	margin-top:250px;
-	
+	margin-top:250px;	
 }
