--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -24,7 +24,8 @@
 		border : 1px solid #B1B1B1;
 		border-radius:30%;
 	}
-	.pen, .monitor, .change, .exit, .upload{
+/*기능 추가시마다 해당 기능 클래스 이름 추가필요*/
+	.pen, .monitor, .change, .exit, .upload,.emotion,.emotionSelect{
 		padding:5px;
 	}
 	.mic{
@@ -32,6 +33,12 @@
 		padding-left:12px; 
 		padding-right:12px;
 	}
+	.emotion-select{
+		padding:5px;
+		padding-left:7px; 
+		padding-right:8px;
+	}
+	
 	.exit-box{
 		position:absolute;
 		top:10px;
@@ -43,3 +50,29 @@
 	a>i:hover{
 		background:#B1B1B1;
 	}
+	
+/*이모티콘 출력*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 80px;
+    left:-75px;
+    bottom: 55px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.dropdown-content a {
+    text-decoration: none;
+    display: inline-block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+}
