--- a/MentoMenti/src/main/resources/static/css/basic.css
+++ b/MentoMenti/src/main/resources/static/css/basic.css
@@ -1,14 +1,13 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-body{
-	font-family : 'Roboto', sans-serif;
-}
 *{
 	margin : 0;
 	padding: 0;
 	list-style :none;
 	text-decoration : none;
+	font-family: 'Noto Sans KR', sans-serif;
+	font-weight: 300;
 }
 
 section{
@@ -27,6 +26,14 @@ section{
 	padding-top:100px;
 }
 
+#pageHeading > h1{
+	font-weight:500;
+}
+
+thead > tr > th{
+	font-weight:500;
+}
+
 #colItems{
 	line-height:30px;
 	height:30px
@@ -42,6 +49,9 @@ section{
 	transition:all .5s;
 }
 
+.font-weight-500{
+	font-weight:500;
+}
 
 @media screen and (min-width:768px){
 	/*검색창*/
