--- a/MentoMenti/bin/src/main/resources/static/css/basic.css
+++ b/MentoMenti/bin/src/main/resources/static/css/basic.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
+body{
+	background-color:#f8f9fc;
+}
+
 *{
 	margin : 0;
 	padding: 0;
@@ -112,7 +116,6 @@ thead > tr > th{
 }
 
 #wrapper{
-	height:100%;
 }
 
 @media screen and (min-width:768px){
