--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -28,6 +28,7 @@
 		border : 1px solid #B1B1B1;
 		color:black;
 		border-radius:30%;
+		cursor:pointer;
 	}
 	.icon>label>i{
 		border : 1px solid #B1B1B1;
@@ -94,4 +95,55 @@
 
 .dropbtn:hover .dropdown-content {
     display: flex;
+}
+
+/*마이크 hover*/
+.nonemic_ex{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    padding:10px;
+    left:-10px;
+    bottom: 55px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius:10px;
+    z-index:10000;
+}
+.usemic_ex{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    padding:10px;
+    left:-20px;
+    bottom: 55px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.inactive:hover .nonemic_ex{
+	display:block;
+}
+
+.active:hover .usemic_ex{
+	display:block;
+}
+/*이동 설명*/
+.moveExplain{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    padding:10px;
+    left:-45px;
+    bottom: 55px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.movebtn:hover .moveExplain{
+	display:block;
 }
