수업,실습페이지 버튼마다 라벨링 & 닉네임제(혹시몰라서 백업해둠):리스트,채팅/ 비번찾기시 location

--- a/MentoMenti/src/main/resources/static/css/defaultStudyPractice.css
+++ b/MentoMenti/src/main/resources/static/css/defaultStudyPractice.css
@@ -9,7 +9,7 @@ html,body{
 .main{
 	width:100%;
 	height:100%;
-	background:#A4E5F8;
+	background:#474f7d;
 }
 .shadow {
     box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important;
