--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -4,7 +4,7 @@
 	.function{
 		width:100%;
 		height:10%;
-		background:white;
+		background:#f9f9f9;
 		clear: both;
 		text-align: center;
 		display: table;
@@ -87,13 +87,30 @@
     z-index:10000;
 }
 
+.emotionExplain{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 110px;
+    padding:10px;
+    left:-27px;
+    bottom: 130px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:8000;
+}
+
 .dropdown-content a {
     text-decoration: none; 
     display: inline-block;
     cursor:pointer;
 }
 
-.dropbtn:hover .dropdown-content {
+.dropbtn:hover .dropdown-content{
+    display: flex;
+}
+
+.dropbtn:hover .emotionExplain{
     display: flex;
 }
 
@@ -145,5 +162,39 @@
 }
 
 .movebtn:hover .moveExplain{
+	display:block;
+}
+/*화면공유 설명*/
+.screenExplain{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    padding:10px;
+    left:-20px;
+    bottom: 55px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.screenbtn:hover .screenExplain{
+	display:block;
+}
+/*화면공유 설명*/
+.fileExplain{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    padding:10px;
+    left:-25px;
+    bottom: 55px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.filebtn:hover .fileExplain{
 	display:block;
 }
