그룹 카드 레이아웃 수정 가입 버튼 모양/위치, 현재 인원 수 숫자로도 표시, 사람 이미지 색상 조정

--- a/MentoMenti/src/main/resources/static/css/groupCard.css
+++ b/MentoMenti/src/main/resources/static/css/groupCard.css
@@ -50,7 +50,8 @@ a .cardscreen{
 a .cardscreen .introbottom{
 	width:100%;
 	height:100%;
-	background:#55A1CC;
+	/*background:#55A1CC;*/
+	background:#8EA8DB;
 	position:absolute;
 	top:150%;
 	left:0;
