--- a/MentoMenti/src/main/resources/static/css/basic.css
+++ b/MentoMenti/src/main/resources/static/css/basic.css
@@ -22,6 +22,16 @@ body{
 	font-weight:500;
 }
 
+.pageButton{
+	width: 40px;
+	height: 10px;
+	font-size: 15px;
+	padding: 5px;
+	border-radius: 5px;
+	text-decoration: none;
+	background:black
+}
+
 .mb-4{
 	font-size:17px;
 }
