--- a/MentoMenti/src/main/resources/static/css/chat.css
+++ b/MentoMenti/src/main/resources/static/css/chat.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .container {
 	width: 100%;
 	height: 100%;
@@ -10,29 +12,29 @@
 	overflow-x:hidden;
 }
 
-/*½ºÅ©¸¦¹Ù*/
+/*ï¿½ï¿½Å©ï¿½ï¿½ï¿½ï¿½*/
 .chating::-webkit-scrollbar {
 	width: 10px;
 }
 
-/*½ºÅ©¸¦¹Ù ¸·´ë*/
+/*ï¿½ï¿½Å©ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½*/
 .chating::-webkit-scrollbar-thumb {
 	background-color: white;
 	border-radius:5px;
 }
 
-/*½ºÅ©¸¦¹Ù Æ®·¢*/
+/*ï¿½ï¿½Å©ï¿½ï¿½ï¿½ï¿½ Æ®ï¿½ï¿½*/
 .chating::-webkit-scrollbar-track {
 	background-color: black;
 	border-radius:5px;
 }
 
-/*chat box ÁÂ¿ì ¿©¹é*/
+/*chat box ï¿½Â¿ï¿½ ï¿½ï¿½ï¿½ï¿½*/
 .chating div {
 	padding: 0 5px 0 5px;
 }
 
-/*chat box ³»ºÎ ±Û¾¾ ÁÂ¿ì ¿©¹é*/
+/*chat box ï¿½ï¿½ï¿½ï¿½ ï¿½Û¾ï¿½ ï¿½Â¿ï¿½ ï¿½ï¿½ï¿½ï¿½*/
 .chating p {
 	min-width: 50px;
 	width: auto;
@@ -40,31 +42,31 @@
 	padding: 0 2px 0 2px;
 }
 
-/*³»°¡ º¸³½ chat box*/
+/*ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ chat box*/
 .chating .me {
-	border-radius: 5px 0px 5px 5px; /*chat box ¿ìÃø »ó´Ü¸¸ °¢Áö°Ô, ³ª¸ÓÁö 5px¾¿ µÕ±Û°Ô ¸¸µê*/
+	border-radius: 5px 0px 5px 5px; /*chat box ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½Ü¸ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ 5pxï¿½ï¿½ ï¿½Õ±Û°ï¿½ ï¿½ï¿½ï¿½ï¿½*/
 	color: BLACK;
 	display: inline-block;
-	text-align: right; /*¿ìÃø*/
+	text-align: right; /*ï¿½ï¿½ï¿½ï¿½*/
 	background: #F7E600;
 }
 
-/*³»°¡ º¸³½ chat box*/
+/*ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ chat box*/
 .me-box {
 	text-align: right;
 }
 
-/*»ó´ë¹æ chat box*/
+/*ï¿½ï¿½ï¿½ï¿½ chat box*/
 .chating .others {
-	border-radius: 0px 5px 5px 5px; /*chat box ÁÂÃø »ó´Ü¸¸ °¢Áö°Ô, ³ª¸ÓÁö 5px¾¿ µÕ±Û°Ô ¸¸µê*/
+	border-radius: 0px 5px 5px 5px; /*chat box ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½Ü¸ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ 5pxï¿½ï¿½ ï¿½Õ±Û°ï¿½ ï¿½ï¿½ï¿½ï¿½*/
 	color: #F6F6F6;
 	display: inline-block;
 	text-align: left;
 	background: #292B33;
 }
 
-/*¸Þ½ÃÁö º¸³»´Â °Í Ã³À½¿¡ ¾Èº¸ÀÌ°Ô*/
-/*db¿¬µ¿ÇÏ°í ¼öÁ¤ÇÊ¿ä*/
+/*ï¿½Þ½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ Ã³ï¿½ï¿½ï¿½ï¿½ ï¿½Èºï¿½ï¿½Ì°ï¿½*/
+/*dbï¿½ï¿½ï¿½ï¿½ï¿½Ï°ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Ê¿ï¿½*/
 #yourMsg {
 	display: none;
 }
