--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -93,8 +93,8 @@
     background-color: #f9f9f9;
     min-width: 110px;
     padding:10px;
-    left:-27px;
-    bottom: 130px;
+    left:-30px;
+    bottom: 120px;
     border-radius:10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:8000;
@@ -181,7 +181,7 @@
 .screenbtn:hover .screenExplain{
 	display:block;
 }
-/*화면공유 설명*/
+/*파일공유 설명*/
 .fileExplain{
 	display: none;
     position: absolute;
