--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -198,3 +198,20 @@
 .filebtn:hover .fileExplain{
 	display:block;
 }
+/*컴파일기능 설명*/
+.compilerExplain{
+	display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    padding:10px;
+    left:-25px;
+    bottom: 55px;
+    border-radius:10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:10000;
+}
+
+.compilerbtn:hover .compileExplain{
+	display:block;
+}
