메인 내용 수정 / 컴파일러 기능 추가 / 실습페이지 이동 삭제

--- a/MentoMenti/src/main/resources/static/css/newSlider.css
+++ b/MentoMenti/src/main/resources/static/css/newSlider.css
@@ -47,6 +47,7 @@ label.left{
 	background-position:center center;
 	background-size:50%;
 	background-repeat:no-repeat;
+	filter: drop-shadow(0 0 10px #0003);
 }
 label.right{
 	right:20px;
@@ -55,6 +56,7 @@ label.right{
 	background-position:center center;
 	background-size:50%;
 	background-repeat:no-repeat;
+	filter: drop-shadow(0 0 10px #0003);
 }
 
 
