--- a/MentoMenti/src/main/resources/static/css/bottomBar.css
+++ b/MentoMenti/src/main/resources/static/css/bottomBar.css
@@ -81,7 +81,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 80px;
-    left:-70px;
+    left:-132px;
     bottom: 55px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:10000;
@@ -205,13 +205,13 @@
     background-color: #f9f9f9;
     min-width: 100px;
     padding:10px;
-    left:-25px;
+    left:-20px;
     bottom: 55px;
     border-radius:10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:10000;
 }
 
-.compilerbtn:hover .compileExplain{
+.compilerbtn:hover .compilerExplain{
 	display:block;
 }
