--- a/MentoMenti/src/main/resources/static/css/sidebar.css
+++ b/MentoMenti/src/main/resources/static/css/sidebar.css
@@ -50,7 +50,25 @@
 	color : white !important;
 }
 
+/*사이드바 각 요소*/
+.sidebar-component{
+	font-size:16px;
+}
 
+#sidebar-bottom{
+	width:100%;
+	position:absolute;
+	bottom:0;
+	margin:30px 0px;
+	
+	text-align:center;
+	color:white;
+	font-size:18px;
+}
+
+@media screen and (max-height:800px){
+	#sidebar-bottom{display:none;}
+}
 
 /* PC 환경 사이드바 버튼 */
 #check{
