폰/태블릿 스크롤 시 메뉴 내용 사라지는 오류 해결

--- a/MentoMenti/src/main/resources/static/css/basic.css
+++ b/MentoMenti/src/main/resources/static/css/basic.css
@@ -100,9 +100,15 @@ thead > tr > th{
 	}
 }
 
-@media screen and (max-width:767px){
+@media screen and (max-width:767px) and (min-width:401px){
 	#searchText{
 		width:150px;
+	}
+}
+
+@media screen and (max-width:400px){
+	#searchText{
+		width:100px;
 	}
 }
 
