반응형 웹 보완 모바일 - 검색창 크기 조절, 프로필 툴팁 안나오게, 게시물 리스트 작성자 안나오게 수정

--- a/MentoMenti/src/main/resources/static/css/profile-tooltip.css
+++ b/MentoMenti/src/main/resources/static/css/profile-tooltip.css
@@ -19,12 +19,22 @@
 	border-radius:10px;
 	
 	overflow:hidden;
+	z-index:2;
 }
 
-.nickname-tooltip:hover{
-	cursor:pointer;
+@media screen and (min-width:591px){
+	.nickname-tooltip:hover{
+		cursor:pointer;
+	}
+	
+	.nickname-tooltip:hover .tooltip-content{
+		display:block;
+	}	
 }
 
-.nickname-tooltip:hover .tooltip-content{
-	display:block;
+@media screen and (max-width:590px){
+	
+	.nickname-tooltip:hover .tooltip-content{
+		display:none;
+	}
 }
