--- a/MentoMenti/src/main/resources/static/css/basic.css
+++ b/MentoMenti/src/main/resources/static/css/basic.css
@@ -100,15 +100,23 @@ thead > tr > th{
 	}
 }
 
-@media screen and (max-width:767px) and (min-width:401px){
+@media screen and (max-width:767px) and (min-width:591px){
 	#searchText{
 		width:150px;
 	}
+	
+	.writer{
+		display:none;
+	}
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:590px){
 	#searchText{
 		width:100px;
+	}
+	
+	.writer{
+		display:none;
 	}
 }
 
